# RetroDevStudio

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  build-test.bat  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: build.mjs  (+16 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/compiler/: ast_generator.rs  build_orch.rs  mod.rs  sgdk_emitter.rs  snes_emitter.rs
src-tauri/src/core/: asset_quality.rs  audio_pipeline.rs  compatibility_harness.rs  diagnostics.rs  editor_validation.rs  gml_to_nodes.rs  input_commands.rs  memory_pool.rs  mod.rs  project_capability.rs  project_mgr.rs  rom_mastering.rs  runtime_contracts.rs  sgdk_corpus_inventory.rs  sgdk_pattern_templates.rs  sgdk_semantic_graph.rs  sgdk_semantic_reports.rs
src-tauri/src/emulator/: frame_buffer.rs  libretro_ffi.rs  mod.rs
src-tauri/src/hardware/: constraint_engine.rs  md_profile.rs  mod.rs  snes_profile.rs
src-tauri/src/tools/: asset_extractor.rs  deep_profiler.rs  dependency_manager.rs  mod.rs  patch_studio.rs  photo2sgdk.rs  reverse_explorer.rs
src-tauri/src/tools/reverse/: annotations.rs  audio.rs  code.rs  graphics.rs  loader.rs  manifest.rs  matching.rs  mod.rs  platform.rs  projection.rs  text.rs  trace.rs
src-tauri/src/ugdm/: components.rs  entities.rs  mod.rs  serde_helpers.rs
src-tauri/tests/fixtures/projects/godot_2d_subset/: project.godot
src-tauri/tests/fixtures/projects/godot_complex_bridge/: project.godot
(+164 files in other folders)
