[package]
name = "retro-dev-studio"
version = "0.1.0"
description = "RetroDev Studio - 16-bit game development platform"
authors = ["RetroDev Team"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
image = { version = "0.25", default-features = false, features = ["bmp", "png", "pnm"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sevenz-rust2 = { version = "0.16", features = ["util"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
